--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,11 @@ workflows:
   version: 2
   primary:
     jobs:
-      - test:
-          filters:
-            branches:
-              ignore:
-                - master
+#      - test:
+#          filters:
+#            branches:
+#              ignore:
+#                - master
       - publish:
           filters:
             branches:
