--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: echo "$OPS_SSH_KEY" | base64 -d > ~/.ssh/id_rsa.ops
       - run:
           name: Load SSH Key into Agent
-          command: ssh-add .ssh/id_rsa.ops
+          command: ssh-add ~/.ssh/id_rsa.ops
       - run:
           name: Stage Signing Key
           command: |
