--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - checkout
       - run:
           name: Stage SSH Key
-          command: echo "$OPS_SSH_KEY" | base64 -d > ~/.ssh/id_rsa.ops
+          command: echo "$OPS_SSH_KEY" | base64 -d > ~/.ssh/id_rsa.ops && chmod 600 ~/.ssh/id_rsa.ops
       - run:
           name: Load SSH Key into Agent
           command: ssh-add ~/.ssh/id_rsa.ops
