--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
       - checkout
       - run:
           name: Stage License
-          command: echo "$ORION_LICENSE_CONTENT" | base64 -D > ~/orionlicense.yaml
+          command: echo "$ORION_LICENSE_CONTENT" | base64 -d > ~/orionlicense.yaml
       - run:
           name: Stage SSH Key
           command: echo "$OPS_SSH_KEY" | base64 -d > ~/.ssh/id_rsa.ops && chmod 600 ~/.ssh/id_rsa.ops
