--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,9 @@ jobs:
       - run:
           name: Import Signing Key
           command: gpg --import obci@orionlabs.asc
-      - run:
-          name: Publish
-          command: gomason publish -v
+#      - run:
+#          name: Publish
+#          command: gomason publish -v
 
 workflows:
   version: 2
