added elipsis to build command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           command: gpg --import obci@orionlabs.asc
       - run:
           name: Publish
-          command: gomason publish -v --test-timeout 30m
+          command: gomason publish -v --test-timeout 30m ./...
 
 workflows:
   version: 2
